--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="anime">
-            <img class="gif-img" src="./img/pokimon.gif"  height="100%" id="disappear" onclick="appear()" alt="">
+            <img class="gif-img" src="./pokimon.gif"  height="100%" id="disappear" onclick="appear()" alt="">
         </div>
         <div class="background-color">
             <div class="bg-h1"><h1 class="h1-css">Calculator</h1></div>
